--- a/loligochi/loligochi-app/MainWindow.xaml
+++ b/loligochi/loligochi-app/MainWindow.xaml
@@ -64,7 +64,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
-        
+        <!-- TODO buttons fix & style hierarchy fix & LoadSave not working correctly.-->
         <Storyboard x:Key="FadeInBackground">
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Opacity)"
                                            Storyboard.TargetName="Welcome_Scene">
