--- a/loligochi/loligochi-app/App.xaml
+++ b/loligochi/loligochi-app/App.xaml
@@ -13,6 +13,7 @@
                 <ResourceDictionary Source="src/styles/InputFieldStyle.xaml"/>
                 <ResourceDictionary Source="src/styles/LeftArrowStyle.xaml"/>
                 <ResourceDictionary Source="src/styles/RightArrowStyle.xaml"/>
+                <ResourceDictionary Source="src/styles/DownArrowStyle.xaml"/>
 
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
