--- a/loligochi/loligochi-app/App.xaml
+++ b/loligochi/loligochi-app/App.xaml
@@ -14,6 +14,7 @@
                 <ResourceDictionary Source="src/styles/LeftArrowStyle.xaml"/>
                 <ResourceDictionary Source="src/styles/RightArrowStyle.xaml"/>
                 <ResourceDictionary Source="src/styles/DownArrowStyle.xaml"/>
+                <ResourceDictionary Source="src/styles/UpArrowStyle.xaml"/>
 
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
