--- a/loligochi/loligochi-app/App.xaml
+++ b/loligochi/loligochi-app/App.xaml
@@ -15,6 +15,7 @@
                 <ResourceDictionary Source="src/styles/RightArrowStyle.xaml"/>
                 <ResourceDictionary Source="src/styles/DownArrowStyle.xaml"/>
                 <ResourceDictionary Source="src/styles/UpArrowStyle.xaml"/>
+                <ResourceDictionary Source="src/styles/ResizedButtonStyle.xaml"/>
 
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
