--- a/loligochi/loligochi-app/src/styles/LeftArrowStyle.xaml
+++ b/loligochi/loligochi-app/src/styles/LeftArrowStyle.xaml
@@ -9,19 +9,19 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <ImageBrush x:Key="Button.Static.Background1" ImageSource="/src/images/assets/arrow.png" TileMode="None" Stretch="Uniform"/>
-    <SolidColorBrush x:Key="Button.Static.Border1" Color="Transparent"/>
-    <ImageBrush x:Key="Button.MouseOver.Background1" ImageSource="/src/images/assets/arrow.png" TileMode="None" Stretch="Uniform"/>
-    <SolidColorBrush x:Key="Button.MouseOver.Border1" Color="Transparent"/>
-    <ImageBrush x:Key="Button.Pressed.Background1" ImageSource="/src/images/assets/arrow.png" TileMode="None" Stretch="Uniform"/>
-    <SolidColorBrush x:Key="Button.Pressed.Border1" Color="Transparent"/>
-    <ImageBrush x:Key="Button.Disabled.Background1" ImageSource="/src/images/assets/arrow.png" TileMode="None" Stretch="Uniform"/>
-    <SolidColorBrush x:Key="Button.Disabled.Border1" Color="Transparent"/>
+    <ImageBrush x:Key="Button.Static.Background" ImageSource="/src/images/assets/arrow.png" TileMode="None" Stretch="Uniform"/>
+    <SolidColorBrush x:Key="Button.Static.Border" Color="Transparent"/>
+    <ImageBrush x:Key="Button.MouseOver.Background" ImageSource="/src/images/assets/arrow.png" TileMode="None" Stretch="Uniform"/>
+    <SolidColorBrush x:Key="Button.MouseOver.Border" Color="Transparent"/>
+    <ImageBrush x:Key="Button.Pressed.Background" ImageSource="/src/images/assets/arrow.png" TileMode="None" Stretch="Uniform"/>
+    <SolidColorBrush x:Key="Button.Pressed.Border" Color="Transparent"/>
+    <ImageBrush x:Key="Button.Disabled.Background" ImageSource="/src/images/assets/arrow.png" TileMode="None" Stretch="Uniform"/>
+    <SolidColorBrush x:Key="Button.Disabled.Border" Color="Transparent"/>
     <ImageBrush x:Key="Button.Disabled.Foreground1" ImageSource="/src/images/assets/arrow.png" TileMode="None" Stretch="Uniform"/>
     <Style x:Key="LeftArrowStyling" TargetType="{x:Type Button}">
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual1}"/>
-        <Setter Property="Background" Value="{StaticResource Button.Static.Background1}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border1}"/>
+        <Setter Property="Background" Value="{StaticResource Button.Static.Background}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border}"/>
         <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -38,16 +38,16 @@
                             <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="true">
-                            <Setter Property="Background" TargetName="border" Value="{StaticResource Button.MouseOver.Background1}"/>
-                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.MouseOver.Border1}"/>
+                            <Setter Property="Background" TargetName="border" Value="{StaticResource Button.MouseOver.Background}"/>
+                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.MouseOver.Border}"/>
                         </Trigger>
                         <Trigger Property="IsPressed" Value="true">
-                            <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Pressed.Background1}"/>
-                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Pressed.Border1}"/>
+                            <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Pressed.Background}"/>
+                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Pressed.Border}"/>
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="false">
-                            <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Disabled.Background1}"/>
-                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Disabled.Border1}"/>
+                            <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Disabled.Background}"/>
+                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Disabled.Border}"/>
                             <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource Button.Disabled.Foreground1}"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
