--- a/loligochi/loligochi-app/src/styles/ResizedButtonStyle.xaml
+++ b/loligochi/loligochi-app/src/styles/ResizedButtonStyle.xaml
@@ -9,19 +9,19 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <SolidColorBrush x:Key="Button.Static.Background5" Color="#FFDDDDDD"/>
-    <SolidColorBrush x:Key="Button.Static.Border5" Color="#FF707070"/>
-    <ImageBrush x:Key="Button.MouseOver.Background5" ImageSource="/src/images/assets/button_hovered.png" Stretch="Fill" TileMode="None"/>
-    <SolidColorBrush x:Key="Button.MouseOver.Border5" Color="Transparent"/>
-    <ImageBrush x:Key="Button.Pressed.Background5" ImageSource="/src/images/assets/button_hovered.png" Stretch="Fill" TileMode="None"/>
-    <SolidColorBrush x:Key="Button.Pressed.Border5" Color="Transparent"/>
-    <SolidColorBrush x:Key="Button.Disabled.Background5" Color="#FFF4F4F4"/>
-    <SolidColorBrush x:Key="Button.Disabled.Border5" Color="#FFADB2B5"/>
+    <SolidColorBrush x:Key="Button.Static.Background" Color="#FFDDDDDD"/>
+    <SolidColorBrush x:Key="Button.Static.Border" Color="#FF707070"/>
+    <ImageBrush x:Key="Button.MouseOver.Background" ImageSource="/src/images/assets/button_hovered.png" Stretch="Fill" TileMode="None"/>
+    <SolidColorBrush x:Key="Button.MouseOver.Border" Color="Transparent"/>
+    <ImageBrush x:Key="Button.Pressed.Background" ImageSource="/src/images/assets/button_hovered.png" Stretch="Fill" TileMode="None"/>
+    <SolidColorBrush x:Key="Button.Pressed.Border" Color="Transparent"/>
+    <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
+    <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5"/>
     <SolidColorBrush x:Key="Button.Disabled.Foreground5" Color="#FF838383"/>
     <Style x:Key="ResizedButtonStyle" TargetType="{x:Type Button}">
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual2}"/>
-        <Setter Property="Background" Value="{StaticResource Button.Static.Background5}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border5}"/>
+        <Setter Property="Background" Value="{StaticResource Button.Static.Background}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border}"/>
         <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -38,16 +38,16 @@
                             <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="true">
-                            <Setter Property="Background" TargetName="border" Value="{StaticResource Button.MouseOver.Background5}"/>
-                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.MouseOver.Border5}"/>
+                            <Setter Property="Background" TargetName="border" Value="{StaticResource Button.MouseOver.Background}"/>
+                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.MouseOver.Border}"/>
                         </Trigger>
                         <Trigger Property="IsPressed" Value="true">
-                            <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Pressed.Background5}"/>
-                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Pressed.Border5}"/>
+                            <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Pressed.Background}"/>
+                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Pressed.Border}"/>
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="false">
-                            <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Disabled.Background5}"/>
-                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Disabled.Border5}"/>
+                            <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Disabled.Background}"/>
+                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Disabled.Border}"/>
                             <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource Button.Disabled.Foreground5}"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
