--- a/loligochi/loligochi-app/src/styles/RightArrowStyle.xaml
+++ b/loligochi/loligochi-app/src/styles/RightArrowStyle.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <ImageBrush x:Key="Button.Static.Background2" ImageSource="/src/images/assets/arrow.png" TileMode="None" Stretch="Uniform">
+    <ImageBrush x:Key="Button.Static.Background" ImageSource="/src/images/assets/arrow.png" TileMode="None" Stretch="Uniform">
         <ImageBrush.RelativeTransform>
             <TransformGroup>
                 <ScaleTransform CenterY="0.5" CenterX="0.5"/>
@@ -10,8 +10,8 @@
             </TransformGroup>
         </ImageBrush.RelativeTransform>
     </ImageBrush>
-    <SolidColorBrush x:Key="Button.Static.Border2" Color="Transparent"/>
-    <ImageBrush x:Key="Button.MouseOver.Background2" ImageSource="/src/images/assets/arrow.png" TileMode="None" Stretch="Uniform">
+    <SolidColorBrush x:Key="Button.Static.Border" Color="Transparent"/>
+    <ImageBrush x:Key="Button.MouseOver.Background" ImageSource="/src/images/assets/arrow.png" TileMode="None" Stretch="Uniform">
         <ImageBrush.RelativeTransform>
             <TransformGroup>
                 <ScaleTransform CenterY="0.5" CenterX="0.5"/>
@@ -21,8 +21,8 @@
             </TransformGroup>
         </ImageBrush.RelativeTransform>
     </ImageBrush>
-    <SolidColorBrush x:Key="Button.MouseOver.Border2" Color="Transparent"/>
-    <ImageBrush x:Key="Button.Pressed.Background2" ImageSource="/src/images/assets/arrow.png" TileMode="None" Stretch="Uniform">
+    <SolidColorBrush x:Key="Button.MouseOver.Border" Color="Transparent"/>
+    <ImageBrush x:Key="Button.Pressed.Background" ImageSource="/src/images/assets/arrow.png" TileMode="None" Stretch="Uniform">
         <ImageBrush.RelativeTransform>
             <TransformGroup>
                 <ScaleTransform CenterY="0.5" CenterX="0.5"/>
@@ -32,8 +32,8 @@
             </TransformGroup>
         </ImageBrush.RelativeTransform>
     </ImageBrush>
-    <SolidColorBrush x:Key="Button.Pressed.Border2" Color="Transparent"/>
-    <ImageBrush x:Key="Button.Disabled.Background2" ImageSource="/src/images/assets/arrow.png" TileMode="None" Stretch="Uniform">
+    <SolidColorBrush x:Key="Button.Pressed.Border" Color="Transparent"/>
+    <ImageBrush x:Key="Button.Disabled.Background" ImageSource="/src/images/assets/arrow.png" TileMode="None" Stretch="Uniform">
         <ImageBrush.RelativeTransform>
             <TransformGroup>
                 <ScaleTransform CenterY="0.5" CenterX="0.5"/>
@@ -43,7 +43,7 @@
             </TransformGroup>
         </ImageBrush.RelativeTransform>
     </ImageBrush>
-    <SolidColorBrush x:Key="Button.Disabled.Border2" Color="Transparent"/>
+    <SolidColorBrush x:Key="Button.Disabled.Border" Color="Transparent"/>
     <ImageBrush x:Key="Button.Disabled.Foreground2" ImageSource="/src/images/assets/arrow.png" TileMode="None" Stretch="Uniform">
         <ImageBrush.RelativeTransform>
             <TransformGroup>
@@ -56,8 +56,8 @@
     </ImageBrush>
     <Style x:Key="RightArrowStyling" TargetType="{x:Type Button}">
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual1}"/>
-        <Setter Property="Background" Value="{StaticResource Button.Static.Background2}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border2}"/>
+        <Setter Property="Background" Value="{StaticResource Button.Static.Background}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border}"/>
         <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -74,16 +74,16 @@
                             <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="true">
-                            <Setter Property="Background" TargetName="border" Value="{StaticResource Button.MouseOver.Background2}"/>
-                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.MouseOver.Border2}"/>
+                            <Setter Property="Background" TargetName="border" Value="{StaticResource Button.MouseOver.Background}"/>
+                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.MouseOver.Border}"/>
                         </Trigger>
                         <Trigger Property="IsPressed" Value="true">
-                            <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Pressed.Background2}"/>
-                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Pressed.Border2}"/>
+                            <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Pressed.Background}"/>
+                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Pressed.Border}"/>
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="false">
-                            <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Disabled.Background2}"/>
-                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Disabled.Border2}"/>
+                            <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Disabled.Background}"/>
+                            <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Disabled.Border}"/>
                             <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource Button.Disabled.Foreground2}"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
